<resources>
    <string name="app_name">Test Application</string>
    <string name="Quantity">Quantity</string>
    <string name="Zero">0</string>
    <string name="cash">$0</string>
    <string name="order_me">Order Me</string>
    <string name="Price">Price</string>
    <string name="Name">Name:</string>
    <string name="unlock_name">Unlock Name</string>
    <string name="unlock" />
    <string name="myName"> Derrick</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
</resources>
