<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myapplication.MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_marginBottom="10dp"
            android:textAllCaps="true" />
        <TextView
            android:id="@+id/unlockName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock"
            android:layout_marginBottom="10dp"
            android:textAllCaps="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock_name"
            android:onClick="submitName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quantity"
            android:textAllCaps="true" />
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/increment"
            android:onClick="increment"
            android:layout_marginTop="16dp" />
        <TextView
            android:id="@+id/quantity_text_view_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zero"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/decrement"
            android:onClick="decrement"
            android:layout_marginTop="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            />
        <TextView
            android:id="@+id/price_text_view_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_me"
            android:onClick="submitOrder"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
